--- a/SoftwareConfeccao/MainPage.xaml
+++ b/SoftwareConfeccao/MainPage.xaml
@@ -3,5 +3,33 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoftwareConfeccao.MainPage"
              Shell.NavBarIsVisible = "False">
+<ContentPage.Content>
+        <StackLayout BackgroundColor="LightBlue" Padding="10">
+            <Frame CornerRadius="10" BackgroundColor="LightGray" Padding="10" Margin="0,10">
+                <StackLayout>
+                    <Image Source="icon.png" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" />
+                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" />
+                </StackLayout>
+            </Frame>
+            
+            <Label Text="Nome" />
+            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
+                <Entry Placeholder="Insira um nome..." Text="Rodinei" />
+            </Frame>
 
+            <Label Text="Telefone" />
+            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
+                <Entry Placeholder="Insira um telefone..." TextColor="Red" />
+            </Frame>
+
+            <Label Text="E-Mail" />
+            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
+                <Entry Placeholder="Insira um e-mail..." Text="rodilindo@gmail.com" />
+            </Frame>
+
+            <Button Text="Salvar" BackgroundColor="LightGray" Margin="0,20,0,0" />
+
+            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" />
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
