--- a/SoftwareConfeccao/MainPage.xaml
+++ b/SoftwareConfeccao/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoftwareConfeccao.MainPage"
              Shell.NavBarIsVisible = "False">
-<ContentPage.Content>
+    <ContentPage.Content>
         <StackLayout BackgroundColor="LightBlue" Padding="10">
             <Frame CornerRadius="10" BackgroundColor="LightGray" Padding="10" Margin="0,10">
                 <StackLayout>
@@ -30,6 +30,37 @@
             <Button Text="Salvar" BackgroundColor="LightGray" Margin="0,20,0,0" />
 
             <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" />
+
+            <!-- Início dos Frames-->
+
+            <!-- Frame Cliente Não Encontrado-->
+
+            <Frame CornerRadius="20" BackgroundColor="White" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Image Source="warning.png" Grid.Row="0" Grid.Column="0" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" VerticalOptions="Center" />
+                        <Label Text="Não foi encontrado nenhum cliente com os dados inseridos. Deseja criar um novo Cadastro?" 
+                               Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" 
+                               HorizontalTextAlignment="Center" VerticalTextAlignment="Center" 
+                               Margin="10" />
+
+                        <Button Text="X" BackgroundColor="LightGreen" CornerRadius="20" Grid.Row="2" Grid.Column="0" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" VerticalOptions="Center" />
+                        <Button Text="V" BackgroundColor="LightCoral" CornerRadius="20" Grid.Row="2" Grid.Column="2" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" VerticalOptions="Center" />
+                    </Grid>
+                </StackLayout>
+            </Frame>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
