--- a/SoftwareConfeccao/Telas/CadastroClientes.xaml
+++ b/SoftwareConfeccao/Telas/CadastroClientes.xaml
@@ -4,32 +4,31 @@
              x:Class="Telas.CadastroClientes"
              Title="Cadastro de Cliente">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="LightBlue" Padding="10">
-            <Frame CornerRadius="10" BackgroundColor="LightGray" Padding="10" Margin="0,10">
+        <StackLayout BackgroundColor="#00008b" Padding="10">
+            <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10" VerticalOptions="FillAndExpand">
                 <StackLayout>
-                    <Image Source="icon.png" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" />
-                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" />
+                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
             
-            <Label Text="Nome" />
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5">
+            <Label Text="Nome" TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
                 <Entry Placeholder="Insira um nome..." />
             </Frame>
 
-            <Label Text="Telefone" />
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5">
+            <Label Text="Telefone" TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
                 <Entry Placeholder="Insira um telefone..." />
             </Frame>
 
-            <Label Text="E-Mail" />
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5">
+            <Label Text="E-Mail" TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
                 <Entry Placeholder="Insira um e-mail..." />
             </Frame>
 
-            <Button Text="Salvar" BackgroundColor="LightGray" Margin="0,20,0,0" />
+            <Button Text="Salvar" BackgroundColor="#6699cc" Margin="0,20,0,0" TextColor="Black"/>
 
-            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" />
+            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc"/>
 
         </StackLayout>
     </ContentPage.Content>
