--- a/SoftwareConfeccao/Telas/Clientes.xaml
+++ b/SoftwareConfeccao/Telas/Clientes.xaml
@@ -5,7 +5,7 @@
              Title="Cadastro de Clientes"
              Shell.NavBarIsVisible = "false">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="LightBlue" Padding="10">
+        <StackLayout BackgroundColor="#00008b" Padding="10">
             <Frame CornerRadius="10" BackgroundColor="LightGray" Padding="10" Margin="0,10">
                 <StackLayout>
                     <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" />
@@ -15,6 +15,7 @@
             </Frame>
             
             <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Spacing="10">
+                <ScrollView>
                 <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
                     <Grid>
                         <Grid.ColumnDefinitions>
@@ -65,6 +66,7 @@
                         <Button Text="..." Grid.Column="1" />
                     </Grid>
                 </Frame>
+                </ScrollView>
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" Padding="10">
@@ -72,15 +74,7 @@
                 <Button Text="➕" HorizontalOptions="EndAndExpand" />
             </StackLayout>
 
-            <!--frame dos três pontos-->
-            
-             <Frame CornerRadius="20" BackgroundColor="LightBlue" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-                    <Button Text="◀" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="50" HeightRequest="50" />
-                    <Button Text="Atualizar" BackgroundColor="LightGray" Margin="0,10" />
-                    <Button Text="Deletar" BackgroundColor="LightGray" Margin="0,10" />
-                </StackLayout>
-            </Frame>
+
 
         </StackLayout>
     </ContentPage.Content>
