--- a/SoftwareConfeccao/MainPage.xaml
+++ b/SoftwareConfeccao/MainPage.xaml
@@ -4,12 +4,13 @@
              x:Class="SoftwareConfeccao.MainPage"
              Shell.NavBarIsVisible = "False">
       <ContentPage.Content>
+      <ScrollView>
         <StackLayout BackgroundColor="#00008b" Padding="10">
             <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10">
                 <StackLayout>
                     <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" />
                     <Entry Placeholder="Coloque um dado..." />
-                    <Button Text="➤" HorizontalOptions="End" BackgroundColor="#6699cc"/>
+                    <Button Text="➤" HorizontalOptions="End" BackgroundColor="#4169e1"/>
                 </StackLayout>
             </Frame>
             
@@ -21,7 +22,7 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Label Text="Cliente 1" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" />
+                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
                 <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
@@ -31,7 +32,7 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Label Text="Cliente 2" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" />
+                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
                 <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
@@ -41,7 +42,7 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Label Text="Cliente 3" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" />
+                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
                 <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
@@ -51,7 +52,7 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Label Text="Cliente 4" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" />
+                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
                 <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
@@ -61,15 +62,30 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Label Text="Cliente 5" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" />
+                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" Padding="10">
-                <Button Text="◀" HorizontalOptions="StartAndExpand" />
-                <Button Text="➕" HorizontalOptions="EndAndExpand" />
+                <Button Text="◀" HorizontalOptions="StartAndExpand" BackgroundColor="#4169e1"/>
+                <Button Text="➕" HorizontalOptions="EndAndExpand" BackgroundColor="#4169e1"/>
             </StackLayout>
+
+
+
+        <!--!FRAME DOS TRÊS PONTOS-->
+        <StackLayout  Padding="10" VerticalOptions="CenterAndExpand">
+            <Frame CornerRadius="20" BackgroundColor="LightBlue" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="250" WidthRequest="250" IsVisible="False">
+                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                    <Button Text="◀" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="50" HeightRequest="50" />
+                    <Button Text="Atualizar" BackgroundColor="LightGray" Margin="0,10" />
+                    <Button Text="Deletar" BackgroundColor="LightGray" Margin="0,10" />
+                </StackLayout>
+            </Frame>
         </StackLayout>
+        
+        </StackLayout>
+    </ScrollView>
     </ContentPage.Content>
 </ContentPage>
