--- a/SoftwareConfeccao/Telas/ClientesAltera.xaml
+++ b/SoftwareConfeccao/Telas/ClientesAltera.xaml
@@ -4,32 +4,31 @@
              x:Class="Telas.ClientesAltera"
              Title="Cadastro de Cliente">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="LightBlue" Padding="10">
-            <Frame CornerRadius="10" BackgroundColor="LightGray" Padding="10" Margin="0,10">
+        <StackLayout BackgroundColor="#00008b" Padding="10">
+            <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10"   VerticalOptions="FillAndExpand">
                 <StackLayout>
-                    <Image Source="icon.png" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" />
-                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" />
+                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
                 </StackLayout>
             </Frame>
             
-            <Label Text="Nome" />
+            <Label Text="Nome" TextColor="#a0afb7"/>
             <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
                 <Entry Placeholder="Insira um nome..." Text="Rodrigo" />
             </Frame>
 
-            <Label Text="Telefone" />
+            <Label Text="Telefone" TextColor="#a0afb7"/>
             <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
                 <Entry Placeholder="Insira um telefone..." TextColor="Red" />
             </Frame>
 
-            <Label Text="E-Mail" />
+            <Label Text="E-Mail" TextColor="#a0afb7"/>
             <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
                 <Entry Placeholder="Insira um e-mail..." Text="rodrigo@gmail.com" />
             </Frame>
 
-            <Button Text="Salvar" BackgroundColor="LightGray" Margin="0,20,0,0" />
+            <Button Text="Salvar" BackgroundColor="#6699cc" Margin="0,20,0,0" />
 
-            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" />
+            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc"/>
 
 
 
