--- a/SoftwareConfeccao/Telas/Fornecedores.xaml
+++ b/SoftwareConfeccao/Telas/Fornecedores.xaml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Telas.Clientes"
-             Title="Cadastro de Clientes"
-             Shell.NavBarIsVisible = "false">
+             x:Class="Telas.Fornecedores"
+             Title="Lista Fornecedores">
     <ContentPage.Content>
       <ScrollView>
         <StackLayout BackgroundColor="#00008b" Padding="10">
             <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10">
                 <StackLayout>
-                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" />
+                    <Label Text="Cadastro de Fornecedores" FontAttributes="Bold" HorizontalOptions="Center" />
                     <Entry Placeholder="Coloque um dado..." />
                     <Button Text="➤" HorizontalOptions="End" BackgroundColor="#4169e1"/>
                 </StackLayout>
@@ -22,7 +21,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Cliente 1" VerticalOptions="Center" />
+                        <Label Text="Fornecedor 1" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -32,7 +31,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Cliente 2" VerticalOptions="Center" />
+                        <Label Text="Fornecedor 2" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -42,7 +41,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Cliente 3" VerticalOptions="Center" />
+                        <Label Text="Fornecedor 3" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -52,7 +51,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Cliente 4" VerticalOptions="Center" />
+                        <Label Text="Fornecedor 4" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -62,7 +61,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Cliente 5" VerticalOptions="Center" />
+                        <Label Text="Fornecedor 5" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -77,17 +76,16 @@
 
         <!--!FRAME DOS TRÊS PONTOS-->
         <StackLayout  Padding="10" VerticalOptions="CenterAndExpand">
-            <Frame CornerRadius="20" BackgroundColor="LightBlue" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="250" WidthRequest="250" IsVisible="False">
+            <Frame CornerRadius="20" BackgroundColor="#0073cf" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="250" WidthRequest="250" IsVisible="False">
                 <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-                    <Button Text="◀" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="50" HeightRequest="50" />
-                    <Button Text="Visualisar" BackgroundColor="LightGray" Margin="0,10" />
-                    <Button Text="Deletar" BackgroundColor="LightGray" Margin="0,10" />
+                    <Button Text="◀" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="50" HeightRequest="50" BackgroundColor="#6699cc"/>
+                    <Button Text="Visualizar" BackgroundColor="#6699cc" Margin="0,10" />
+                    <Button Text="Deletar" BackgroundColor="#6699cc" Margin="0,10" />
                 </StackLayout>
             </Frame>
         </StackLayout>
         
         </StackLayout>
     </ScrollView>
-
     </ContentPage.Content>
 </ContentPage>
