--- a/SoftwareConfeccao/Telas/Clientes.xaml
+++ b/SoftwareConfeccao/Telas/Clientes.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.Clientes"
-             Title="Cadastro de Clientes"
+             Title="Lista de Clientes"
              Shell.NavBarIsVisible = "false">
     <ContentPage.Content>
       <ScrollView>
