--- a/SoftwareConfeccao/Telas/ClientesView.xaml
+++ b/SoftwareConfeccao/Telas/ClientesView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.ClientesView"
-             Title="Cadastro de Cliente">
+             Title="Visualização de Cliente">
     <ContentPage.Content>
         <StackLayout BackgroundColor="#00008b" Padding="10">
             <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10"   VerticalOptions="FillAndExpand">
