--- a/SoftwareConfeccao/MainPage.xaml
+++ b/SoftwareConfeccao/MainPage.xaml
@@ -4,88 +4,80 @@
              x:Class="SoftwareConfeccao.MainPage"
              Shell.NavBarIsVisible = "False">
       <ContentPage.Content>
-      <ScrollView>
-        <StackLayout BackgroundColor="#00008b" Padding="10">
-            <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10">
-                <StackLayout>
-                    <Label Text="Cadastro de Pedidos" FontAttributes="Bold" HorizontalOptions="Center" />
-                    <Entry Placeholder="Coloque um dado..." />
-                    <Button Text="➤" HorizontalOptions="End" BackgroundColor="#4169e1"/>
+     <Grid Padding="20" RowSpacing="20" ColumnSpacing="20">
+
+        <!-- Nome da Empresa -->
+        <Frame Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Padding="10" CornerRadius="10" BackgroundColor="White" VerticalOptions="Start">
+            <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                <Image Source="gear.png" WidthRequest="50" HeightRequest="50"/>
+                <Label Text="Nome da Empresa" HorizontalOptions="Center" FontAttributes="Bold"/>
+            </StackLayout>
+        </Frame>
+
+        <!-- Botões com Imagens -->
+        <Grid Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" Padding="20" RowSpacing="20" ColumnSpacing="20">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Frame Grid.Row="0" Grid.Column="0" CornerRadius="10" BackgroundColor="White">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <ImageButton Source="gear.png" WidthRequest="50" HeightRequest="50" Clicked="OnClienteClicked"/>
+                    <Label Text="Cliente" HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
             
-            <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Spacing="10">
-                <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 1" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
-                    </Grid>
-                </Frame>
-                <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 2" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
-                    </Grid>
-                </Frame>
-                <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 3" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
-                    </Grid>
-                </Frame>
-                <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 4" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
-                    </Grid>
-                </Frame>
-                <Frame BackgroundColor="White" CornerRadius="5" Padding="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 5" VerticalOptions="Center" />
-                        <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
-                    </Grid>
-                </Frame>
-            </StackLayout>
-
-            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" Padding="10">
-                <Button Text="◀" HorizontalOptions="StartAndExpand" BackgroundColor="#4169e1"/>
-                <Button Text="➕" HorizontalOptions="EndAndExpand" BackgroundColor="#4169e1"/>
-            </StackLayout>
-
-
-
-        <!--!FRAME DOS TRÊS PONTOS-->
-        <StackLayout  Padding="10" VerticalOptions="CenterAndExpand">
-            <Frame CornerRadius="20" BackgroundColor="LightBlue" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="250" WidthRequest="250" IsVisible="False">
-                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-                    <Button Text="◀" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="50" HeightRequest="50" />
-                    <Button Text="Visualisar" BackgroundColor="LightGray" Margin="0,10" />
-                    <Button Text="Deletar" BackgroundColor="LightGray" Margin="0,10" />
+            <Frame Grid.Row="0" Grid.Column="1" CornerRadius="10" BackgroundColor="White">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <ImageButton Source="gear.png" WidthRequest="50" HeightRequest="50" Clicked="OnFornecedorClicked"/>
+                    <Label Text="Fornecedor" HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
-        </StackLayout>
-        
-        </StackLayout>
-    </ScrollView>
+
+            <Frame Grid.Row="1" Grid.Column="0" CornerRadius="10" BackgroundColor="White">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <ImageButton Source="gear.png" WidthRequest="50" HeightRequest="50" Clicked="OnTransportadoraClicked"/>
+                    <Label Text="Transportadora" HorizontalOptions="Center"/>
+                </StackLayout>
+            </Frame>
+
+            <Frame Grid.Row="1" Grid.Column="1" CornerRadius="10" BackgroundColor="White">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <ImageButton Source="gear.png" WidthRequest="50" HeightRequest="50" Clicked="OnMateriaPrimaClicked"/>
+                    <Label Text="Matéria Prima" HorizontalOptions="Center"/>
+                </StackLayout>
+            </Frame>
+
+            <Frame Grid.Row="2" Grid.Column="0" CornerRadius="10" BackgroundColor="White">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <ImageButton Source="gear.png" WidthRequest="50" HeightRequest="50" Clicked="OnProdutoClicked"/>
+                    <Label Text="Produto" HorizontalOptions="Center"/>
+                </StackLayout>
+            </Frame>
+
+            <Frame Grid.Row="2" Grid.Column="1" CornerRadius="10" BackgroundColor="White">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <ImageButton Source="gear.png" WidthRequest="50" HeightRequest="50" Clicked="OnPedidosClicked"/>
+                    <Label Text="Pedidos" HorizontalOptions="Center"/>
+                </StackLayout>
+            </Frame>
+
+            <Frame Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" CornerRadius="10" BackgroundColor="White">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <ImageButton Source="gear.png" WidthRequest="50" HeightRequest="50" Clicked="OnEstoqueClicked"/>
+                    <Label Text="Estoque" HorizontalOptions="Center"/>
+                </StackLayout>
+            </Frame>
+
+        </Grid>
+    </Grid>
     </ContentPage.Content>
 </ContentPage>
