--- a/SoftwareConfeccao/Telas/CadastroClientes.xaml
+++ b/SoftwareConfeccao/Telas/CadastroClientes.xaml
@@ -13,22 +13,22 @@
             
             <Label Text="Nome" TextColor="#cfe7ff"/>
             <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um nome..." />
+                <Entry Placeholder="Insira um nome..." x:Name="EntryNomeCliente"/>
             </Frame>
 
             <Label Text="Telefone" TextColor="#cfe7ff"/>
             <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um telefone..." />
+                <Entry Placeholder="Insira um telefone..." x:Name="EntryTelefoneCliente"/>
             </Frame>
 
             <Label Text="E-Mail" TextColor="#cfe7ff"/>
             <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um e-mail..." />
+                <Entry Placeholder="Insira um e-mail..."  x:Name="EntryEmailCliente"/>
             </Frame>
 
             <Button Text="Salvar" BackgroundColor="#6699cc" Margin="0,20,0,0" TextColor="Black"/>
 
-            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc"/>
+            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc" Clicked="OnVoltarCadastroClienteClicked"/>
 
         </StackLayout>
     </ContentPage.Content>
