--- a/SoftwareConfeccao/Telas/CadastroClientes.xaml
+++ b/SoftwareConfeccao/Telas/CadastroClientes.xaml
@@ -10,7 +10,9 @@
                     <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
-            
+            <Label Text ="ID:" TextColor="#cfe7ff"/>
+            <Label x:Name="IdLabel" ></Label>
+
             <Label Text="Nome" TextColor="#cfe7ff"/>
             <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
                 <Entry Placeholder="Insira um nome..." x:Name="EntryNomeCliente"/>
@@ -26,7 +28,7 @@
                 <Entry Placeholder="Insira um e-mail..."  x:Name="EntryEmailCliente"/>
             </Frame>
 
-            <Button Text="Salvar" BackgroundColor="#6699cc" Margin="0,20,0,0" TextColor="Black"/>
+            <Button Text="Salvar" BackgroundColor="#6699cc" Margin="0,20,0,0" TextColor="Black" Clicked="OnSalvarDadosClicked"/>
 
             <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc" Clicked="OnVoltarCadastroClienteClicked"/>
 
