--- a/SoftwareConfeccao/Telas/CadastroClientes.xaml
+++ b/SoftwareConfeccao/Telas/CadastroClientes.xaml
@@ -4,33 +4,62 @@
              x:Class="Telas.CadastroClientes"
              Title="Cadastro de Cliente">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="#00008b" Padding="10">
-            <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10" VerticalOptions="FillAndExpand">
+        <StackLayout BackgroundColor="#00008b"
+                Padding="10">
+            <Frame CornerRadius="10"
+                    BackgroundColor="#6699cc"
+                    Padding="10"
+                    Margin="0,10"
+                    VerticalOptions="FillAndExpand">
                 <StackLayout>
-                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center"/>
+                    <Label Text="Cadastro de Clientes"
+                            FontAttributes="Bold"
+                            HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
-            <Label Text ="ID:" TextColor="#cfe7ff"/>
-            <Label x:Name="IdLabel" ></Label>
+            <Label Text="ID:"
+                    TextColor="#cfe7ff"/>
+            <Label x:Name="IdLabel"></Label>
 
-            <Label Text="Nome" TextColor="#cfe7ff"/>
-            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um nome..." x:Name="EntryNomeCliente"/>
+            <Label Text="Nome"
+                    TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5"
+                    BackgroundColor="#cfe7ff"
+                    Padding="5">
+                <Entry Placeholder="Insira um nome..."
+                        x:Name="EntryNomeCliente"/>
             </Frame>
 
-            <Label Text="Telefone" TextColor="#cfe7ff"/>
-            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um telefone..." x:Name="EntryTelefoneCliente"/>
+            <Label Text="Telefone"
+                    TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5"
+                    BackgroundColor="#cfe7ff"
+                    Padding="5">
+                <Entry Placeholder="Insira um telefone..."
+                        x:Name="EntryTelefoneCliente"/>
             </Frame>
 
-            <Label Text="E-Mail" TextColor="#cfe7ff"/>
-            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um e-mail..."  x:Name="EntryEmailCliente"/>
+            <Label Text="E-Mail"
+                    TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5"
+                    BackgroundColor="#cfe7ff"
+                    Padding="5">
+                <Entry Placeholder="Insira um e-mail..."
+                        x:Name="EntryEmailCliente"/>
             </Frame>
 
-            <Button Text="Salvar" BackgroundColor="#6699cc" Margin="0,20,0,0" TextColor="Black" Clicked="OnSalvarDadosClicked"/>
+            <Button Text="Salvar"
+                    BackgroundColor="#6699cc"
+                    Margin="0,20,0,0"
+                    TextColor="Black"
+                    Clicked="OnSalvarDadosClienteClicked"/>
 
-            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc" Clicked="OnVoltarCadastroClienteClicked"/>
+            <Button Text="◀"
+                    HorizontalOptions="Start"
+                    VerticalOptions="EndAndExpand"
+                    Margin="0,10,0,0"
+                    BackgroundColor="#6699cc"
+                    Clicked="OnVoltarCadastroClienteClicked"/>
 
         </StackLayout>
     </ContentPage.Content>
