--- a/SoftwareConfeccao/Telas/ClientesTela.xaml
+++ b/SoftwareConfeccao/Telas/ClientesTela.xaml
@@ -3,54 +3,69 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.ClientesTela"
              Title="Lista de Clientes"
-             Shell.NavBarIsVisible = "false">
+             Shell.NavBarIsVisible="false">
     <ContentPage.Content>
-      <ScrollView>
-        <StackLayout BackgroundColor="#00008b" Padding="10">
-            <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10">
-                <StackLayout>
-                    <Label Text="Cadastro de Clientes" FontAttributes="Bold" HorizontalOptions="Center" />
-                    <Entry Placeholder="Coloque um dado..." />
-                    <Button Text="➤" HorizontalOptions="End" BackgroundColor="#4169e1"/>
-                </StackLayout>
-            </Frame>
-            
+        <ScrollView>
+            <StackLayout BackgroundColor="#00008b"
+                    Padding="10">
+                <Frame CornerRadius="10"
+                        BackgroundColor="#6699cc"
+                        Padding="10"
+                        Margin="0,10">
+                    <StackLayout>
+                        <Label Text="Cadastro de Clientes"
+                                FontAttributes="Bold"
+                                HorizontalOptions="Center"/>
+                        <Entry Placeholder="Coloque um dado..."/>
+                        <Button Text="➤"
+                                HorizontalOptions="End"
+                                BackgroundColor="#4169e1"/>
+                    </StackLayout>
+                </Frame>
+
                 <ListView x:Name="ListaClientes"
-                        HasUnevenRows="True"
-                        HorizontalOptions="Fill"
-                        VerticalOptions="Fill">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                    <ViewCell>
-                        <VerticalStackLayout Padding="20"
-                                            BackgroundColor="#4169e1">
-                        <HorizontalStackLayout>
-                            <Label Text="{Binding Nome}"
-                                FontSize="20"/>
-                            <Label Text="{Binding Sobrenome}"
-                                FontSize="20"
-                                Margin="10,0,0,0"/>
-                        </HorizontalStackLayout>
-                        <Label Text="{Binding Telefone}"
-                                FontSize="20"/>
-                        </VerticalStackLayout>
-                    </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
+                          ItemSelected="QuandoSelecionarUmItemNaListaCliente"
+                          HasUnevenRows="True"
+                          HorizontalOptions="Fill"
+                          VerticalOptions="Fill">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <VerticalStackLayout Padding="20"
+                                                     BackgroundColor="#4169e1">
+                                    <HorizontalStackLayout>
+                                        <Label Text="{Binding Nome}"
+                                               FontSize="20"/>
+                                        <Label Text="{Binding Sobrenome}"
+                                               FontSize="20"
+                                               Margin="10,0,0,0"/>
+                                    </HorizontalStackLayout>
+                                    <Label Text="{Binding Telefone}"
+                                           FontSize="20"/>
+                                </VerticalStackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
                 </ListView>
 
-            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" Padding="10">
-                <Button Text="◀" HorizontalOptions="StartAndExpand" VerticalOptions="End" BackgroundColor="#4169e1" Clicked="OnVoltarClienteClicked"/>
-                <Button Text="➕" HorizontalOptions="EndAndExpand" VerticalOptions="End" BackgroundColor="#4169e1" Clicked="OnNovoClienteClicked"/>
+                <StackLayout Orientation="Horizontal"
+                        HorizontalOptions="FillAndExpand"
+                        VerticalOptions="EndAndExpand"
+                        Padding="10">
+                    <Button Text="◀"
+                            HorizontalOptions="StartAndExpand"
+                            VerticalOptions="End"
+                            BackgroundColor="#4169e1"
+                            Clicked="OnVoltarClienteClicked"/>
+                    <Button Text="➕"
+                            HorizontalOptions="EndAndExpand"
+                            VerticalOptions="End"
+                            BackgroundColor="#4169e1"
+                            Clicked="OnNovoClienteClicked"/>
+                </StackLayout>
+
             </StackLayout>
-
-
-
-        <!--!FRAME DOS TRÊS PONTOS-->
-
-
-        </StackLayout>
-    </ScrollView>
+        </ScrollView>
     </ContentPage.Content>
-    
+
 </ContentPage>
