--- a/SoftwareConfeccao/Telas/PedidoTela.xaml
+++ b/SoftwareConfeccao/Telas/PedidoTela.xaml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Telas.Fornecedores"
-             Title="Lista Fornecedores">
+             x:Class="Telas.PedidoTela"
+             Title="Cadastro de Pedidos"
+             Shell.NavBarIsVisible = "false">
     <ContentPage.Content>
       <ScrollView>
         <StackLayout BackgroundColor="#00008b" Padding="10">
             <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10">
                 <StackLayout>
-                    <Label Text="Cadastro de Fornecedores" FontAttributes="Bold" HorizontalOptions="Center" />
+                    <Label Text="Cadastro de Pedidos" FontAttributes="Bold" HorizontalOptions="Center" />
                     <Entry Placeholder="Coloque um dado..." />
                     <Button Text="➤" HorizontalOptions="End" BackgroundColor="#4169e1"/>
                 </StackLayout>
@@ -21,7 +22,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Fornecedor 1" VerticalOptions="Center" />
+                        <Label Text="Pedido 1" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -31,7 +32,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Fornecedor 2" VerticalOptions="Center" />
+                        <Label Text="Pedido 2" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -41,7 +42,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Fornecedor 3" VerticalOptions="Center" />
+                        <Label Text="Pedido 3" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -51,7 +52,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Fornecedor 4" VerticalOptions="Center" />
+                        <Label Text="Pedido 4" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -61,7 +62,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Fornecedor 5" VerticalOptions="Center" />
+                        <Label Text="Pedido 5" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -76,16 +77,17 @@
 
         <!--!FRAME DOS TRÊS PONTOS-->
         <StackLayout  Padding="10" VerticalOptions="CenterAndExpand">
-            <Frame CornerRadius="20" BackgroundColor="#0073cf" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="250" WidthRequest="250" IsVisible="False">
+            <Frame CornerRadius="20" BackgroundColor="LightBlue" Padding="20" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" HeightRequest="250" WidthRequest="250" IsVisible="False">
                 <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-                    <Button Text="◀" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="50" HeightRequest="50" BackgroundColor="#6699cc"/>
-                    <Button Text="Visualizar" BackgroundColor="#6699cc" Margin="0,10" />
-                    <Button Text="Deletar" BackgroundColor="#6699cc" Margin="0,10" />
+                    <Button Text="◀" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="50" HeightRequest="50" />
+                    <Button Text="Visualisar" BackgroundColor="LightGray" Margin="0,10" />
+                    <Button Text="Deletar" BackgroundColor="LightGray" Margin="0,10" />
                 </StackLayout>
             </Frame>
         </StackLayout>
         
         </StackLayout>
     </ScrollView>
+
     </ContentPage.Content>
 </ContentPage>
