--- a/SoftwareConfeccao/Telas/TransportadoraTela.xaml
+++ b/SoftwareConfeccao/Telas/TransportadoraTela.xaml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Telas.Pedido"
-             Title="Cadastro de Pedidos"
+             x:Class="Telas.TransportadoraTela"
+             Title="Lista de Transportadoras"
              Shell.NavBarIsVisible = "false">
     <ContentPage.Content>
       <ScrollView>
         <StackLayout BackgroundColor="#00008b" Padding="10">
             <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10">
                 <StackLayout>
-                    <Label Text="Cadastro de Pedidos" FontAttributes="Bold" HorizontalOptions="Center" />
+                    <Label Text="Cadastro de Transportadoras" FontAttributes="Bold" HorizontalOptions="Center" />
                     <Entry Placeholder="Coloque um dado..." />
                     <Button Text="➤" HorizontalOptions="End" BackgroundColor="#4169e1"/>
                 </StackLayout>
@@ -22,7 +22,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 1" VerticalOptions="Center" />
+                        <Label Text="Transportadora 1" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -32,7 +32,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 2" VerticalOptions="Center" />
+                        <Label Text="Transportadora 2" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -42,7 +42,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 3" VerticalOptions="Center" />
+                        <Label Text="Transportadora 3" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -52,7 +52,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 4" VerticalOptions="Center" />
+                        <Label Text="Transportadora 4" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
@@ -62,7 +62,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Label Text="Pedido 5" VerticalOptions="Center" />
+                        <Label Text="Transportadora 5" VerticalOptions="Center" />
                         <Button Text="..." Grid.Column="1" BackgroundColor="#4169e1"/>
                     </Grid>
                 </Frame>
